# multichaos

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yaml
docs/: index.md
docs/api/: adaptive.md  base.md  index_set.md  legendre.md  multilevel.md  sampling.md  single_level.md  utils.md
docs/usage/: elliptic_toy_problem.md
src/: adaptive_least_squares.py  adaptive_ml_lsq.py  least_squares.py  legendre.py  lsq.py  ml_lsq.py  multilevel_least_squares.py  polynomial_spaces.py  sampling.py  utils.py
src/multichaos/: adaptive.py  base.py  index_set.py  legendre.py  multilevel.py  sampling.py  single_level.py  utils.py
test/: __init__.py  test_adaptive.py  test_index_sets.py  test_legendre.py  test_lsq.py  test_multilevel.py  test_polynomial_spaces.py  test_sampling.py  test_single_level.py
