[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multichaos"
requires-python = ">= 3.10"
version = "1.0.0"
description = "Multilevel polynomial chaos expansion"
readme = "README.md"
authors = [{name = "Stjepan Salatovic", email = "stjepan.salatovic@kit.edu"}]
dependencies = [
   	"numpy",
   	"openturns",
   	"pytest",
   	"scipy",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings-python"
]